# ai_playground

./: .gitignore  LICENSE  README.md
python_examples/: main.py  pyproject.toml
python_examples/langchain_framework/: agent_with_state_backend.py  agent_with_summarization_capability.py
python_examples/langchain_framework/custom_deep_agents/developper/: agent.py  backend.py  cli.py  deep_agent.py  deep_agent_conversation.py  deep_agent_factory.py  deep_agent_formatting.py  deep_agent_runtime.py  mcp_tools.py
python_examples/langchain_framework/custom_deep_agents/developper/.playwright-mcp/: page-2026-06-30T14-20-40-533Z.yml  (+8 more)
python_examples/langchain_framework/custom_deep_agents/nvim_agent/: cli.py  mcp_tools.py  nvim_agent.py  nvim_agent_conversation.py  nvim_agent_factory.py  runtime.py
python_examples/langchain_framework/file_system_root/: palindrome_num.py  test.txt
python_examples/langchain_framework/langchain_agent_with_file_system_middleware/: file_system_backend.py  state_backend.py  store_backend.py
python_examples/langchain_framework/langchain_agent_with_file_system_middleware/custom_backend/: docker_sandbox_backend.py
python_examples/langchain_framework/langchain_agent_with_skills/: agent.py
python_examples/langchain_framework/langchain_agent_with_subagents/: agent.py
python_examples/langchain_framework/langchain_agent_with_summarization_middleware/: agent.py
python_examples/langchain_framework/lanngchain_agent_with_skills/: agent.py
python_examples/langchain_framework/lanngchain_agent_with_summarization_middleware/: agent.py
(+33 files in other folders)
