[project]
name = "python-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.10",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "manim>=0.20.1",
    "python-dotenv>=1.2.2",
    "torch>=2.12.1",
]
